# 1_semestr

./: Commands.h  README.md  akinator.cpp
Onegin/: main.cpp
Processor/: Commands.h  DSL.h  commands.h
Processor/Assembler/: assembler.cpp  header.h  header_asm.h  main.cpp  main_asm.cpp  reader.cpp  reader_asm.cpp  solve_square.txt
Processor/CPU/: cpu.cpp  header_cpu.h  main_cpu.cpp  reader_cpu.cpp
Stack/: Stack.cpp  Stack.h  main.cpp  stack_header.h
Tree/: tree_dot.cpp
akinator/: Readme.md  akinator.cpp  akinator_creater.cpp  akinator_header.h  akinator_reader.cpp
akinator/tree/: tree.cpp  tree_dot.cpp  tree_header.h
differentiator/: .outtex.tex.swo  .outtex.tex.swp  CMakeLists.txt  DSL.h  Readme.md  commands.h  diff.cpp  diff_header.h  diff_latex.cpp  diff_main.cpp  diff_reader.cpp  dot_out  dot_out.dot  equation_creator.cpp  equation_creator_rec.cpp  input2  latex.cpp  outtex.dvi  outtex1  simple.cpp  tree_dot.cpp  tree_header.h  tree_inorder_input  tree_inorder_input1
differentiator/tree/: tree.cpp  tree_dot.cpp  tree_header.h
hash-table/: hash-table-header.h  hash-table.cpp  hash-table_reader.cpp  hash_funcs.cpp
language/: CMakeLists.txt  Readme.md  dot_out.dot  lang_back_end.cpp  lang_header.h  lang_main.cpp  lang_reader.cpp
language/input-output/: asm_output  tree_output
list/new_list/: new_list.cpp  new_list_header.h
something/: DoubleDinamicArray
